# hackmlrosatom

./: README.md
analitycs/: cluster.ipynb  data_all.ipynb  data_view.ipynb  nlp.ipynb  v_draft.ipynb  view_raw_data.ipynb
api/: .pre-commit-config.yaml  README.md  pyproject.toml
api/deploy/: docker-compose.dev.yml  docker-compose.yml
api/deploy/api/: Dockerfile
api/rosatom_cluster_api/: __main__.py  conftest.py  settings.py
api/rosatom_cluster_api/db/: base.py
api/rosatom_cluster_api/services/: __init__.py
api/rosatom_cluster_api/services/rabbit/: lifetime.py
api/rosatom_cluster_api/services/redis/: lifetime.py
api/rosatom_cluster_api/tests/: __init__.py
api/rosatom_cluster_api/web/: __init__.py  application.py  lifetime.py
api/worker/: pyproject.toml
api/worker/worker/: __init__.py  __main__.py  data_processing.py
atomskills-back-srv/: HELP.md  README.md  build.gradle  settings.gradle
front/: README.md  index.html  package-lock.json  package.json  quasar.config.js
front/src/boot/: OpenMap.js
front/src/clients/: AuthHTTPClient.js  CoreHTTPClient.js
front/src/components/: BarChartComponent.vue  CubeChartComponent.vue  PieChartComponent.vue  RadialChartComponent.vue
front/src/css/: quasar.variables.scss
front/src/layouts/: MainLayout.vue
front/src/pages/: IndexPage.vue  LoginPage.vue  MapPage.vue  SettingsPage.vue
front/src/router/: index.js  routes.js
front/src/services/: AuthService.js  BarChartService.js  DivisionService.js  FileService.js  QualificationService.js
front/src/stores/: UserStore.js
(+71 files in other folders)
