[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Worker for Clusterization API."
authors = [
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aio-pika = "^8.3.0"
yarl = "^1.9.2"
pydantic = "^1.10.7"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
